# codesnipper

./: .gitignore  LICENSE  README.md  pyproject.toml
cs_cli/: charm.py  charm_models.py  codium.py  constants.py  main.py  utils.py
tests/: conftest.py  test_cli.py  test_xml.py
tests/fixtures/codium_only/: .cs-config.json
tests/fixtures/n_snips/: .cs-config.json
