[tool.poetry]
name = "cs-cli"
version = "0.1.0"
description = ""
authors = ["PonyM <dev@lksch.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "^0.7.0", extras = ["all"]}
pydantic = "^1.10.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
isort = "^5.12.0"
python-semantic-release = "^7.33.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_option]
testpaths = [
    "tests"
]

[tool.black]
include = 'tests|cs_cli'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \__pycache__
  | \.tox
  | \.nox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
  | tests/.pytest_cache
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[[tool.poetry.packages]]
include = "cs_cli"

[tool.poetry.scripts]
cs-cli = "cs_cli.main:app"